<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutPageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/profile_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.342" />

        <TextView
            android:id="@+id/tv_about_me_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/my_name"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="@+id/profile_image"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <TextView
            android:id="@+id/tv_about_me_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/my_email"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintEnd_toEndOf="@+id/tv_about_me_name"
            app:layout_constraintStart_toStartOf="@+id/tv_about_me_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_about_me_name" />

        <ImageButton
            android:id="@+id/btn_about_me_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/content_description_icon"
            android:src="@drawable/share_icon"
            app:layout_constraintEnd_toEndOf="@+id/tv_about_me_email"
            app:layout_constraintStart_toStartOf="@+id/tv_about_me_email"
            app:layout_constraintTop_toBottomOf="@id/tv_about_me_email" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>